geting a cross origin error when I try and replace the img source

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1> This text will be replaced by javascript </h1>
+    <img id="myImage" src="https://www.computerhope.com/jargon/d/default.jpg" style="width:300px">
     <script src="main.js"></script>
 </body>
 </html>
